SBE SubPlanner stores 'works' value instead of 'reads' value when planning whole query

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.0-rc8
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • v8.0
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This was introduced during development of SERVER-90415. The issue can lead to a tassert on the cached-plan-recovery code path. To fix it, we should simply change the SBE-with-classic-planner code to write a 'reads' value instead of a 'works' value.

            Assignee:
            Ian Boros
            Reporter:
            Ian Boros
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: