SERVER-91230 Change SBE SubPlanner to write 'reads' instead of 'works' when planning entire query (#23031)

GitOrigin-RevId: b6cd4868285890ec59ec0156375c4002d8c91c72